--- a/frontend/src/app/components/persons/persons.component.html
+++ b/frontend/src/app/components/persons/persons.component.html
@@ -3,7 +3,7 @@
 		<div class="col s5">
 			<div class="card">
 				<div class="card-content">
-					<form #personForm=ngForm (ngSubmit)="addPerson(personForm)">
+					<form #personForm="ngForm" (ngSubmit)="addPerson(personForm)">
 						<div class="row">
 							<div class="input-field col s12">
 								 <input type="text" name="name" #name="ngModel" [(ngModel)]="personService.selectedPerson.name" placeholder="Ingresar nombre">	
@@ -15,7 +15,7 @@
 								 <input type="text" name="celphone" #celphone="ngModel" [(ngModel)]="personService.selectedPerson.celphone" placeholder="Ingresar numero de contacto">	
 							</div>
 							<div class="input-field col s12">
-								 <input type="text" name="edad" #edad="ngModel" [(ngModel)]="personService.selectedPerson.edad" placeholder="Ingresar la edad">	
+								 <input type="text" name="age" #age="ngModel" [(ngModel)]="personService.selectedPerson.age" placeholder="Ingresar la edad">	
 							</div>
 							<div class="card-action">
 								<div class="input field col s12">
