Saved users from front to back is ok

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
-<nav class="nav-weapper blue">
+<nav class="nav-wrapper blue">
   <div class="container">
-    <a href="/" class="brand-logo"> Hola, Bienvenido, Sabemos que quieres viajar en un x, por favor diligencia el siguiente formulario: </a>
+    <a href="/" class="brand-logo">Bienvenido</a>
   </div>
 </nav>
 <app-persons></app-persons>
