--- a/frontend/src/app/components/persons/persons.component.html
+++ b/frontend/src/app/components/persons/persons.component.html
@@ -4,32 +4,33 @@
 			<div class="card">
 				<div class="card-content">
 					<form #personForm="ngForm" (ngSubmit)="addPerson(personForm)">
-						<div class="row">
+						<div class="row">							
 							<div class="input-field col s12">
-								 <input type="text" name="name" #name="ngModel" [(ngModel)]="personService.selectedPerson.name" placeholder="Ingresar nombre">	
+								<input type="text" name="name" #name="ngModel" [(ngModel)] = "personService.selectedPerson.name" placeholder="Ingresar nombre">
 							</div>
+							
 							<div class="input-field col s12">
-								 <input type="text" name="email" #email="ngModel" [(ngModel)]="personService.selectedPerson.email" placeholder="Ingresar email">	
+								<input type="text" name="email" #email="ngModel" [(ngModel)] = "personService.selectedPerson.email" placeholder="Ingresar email">
 							</div>
+							
 							<div class="input-field col s12">
-								 <input type="text" name="celphone" #celphone="ngModel" [(ngModel)]="personService.selectedPerson.celphone" placeholder="Ingresar numero de contacto">	
+								<input type="text" name="celphone" #celphone="ngModel" [(ngModel)] = "personService.selectedPerson.celphone"  placeholder="Ingresar celular">
 							</div>
+							
 							<div class="input-field col s12">
-								 <input type="text" name="age" #age="ngModel" [(ngModel)]="personService.selectedPerson.age" placeholder="Ingresar la edad">	
+								<input type="text" name="age" #age="ngModel" [(ngModel)] = "personService.selectedPerson.age"  placeholder="Ingresar edad">
 							</div>
 							<div class="card-action">
-								<div class="input field col s12">
+								<div class="input-field col s12">
 									<button class="btn" (click)="resetForm(personForm)">Limpiar</button>
-									<button class="btn right">Guardar</button>
-								</div>								
+									<button class="btn right" >Guardar</button>
+								</div>
 							</div>
 						</div>
 					</form>
 				</div>
 			</div>
 		</div>
-		<div class="col s7">
-			
-		</div>
+		<div class="col s7"></div>
 	</div>
 </div>
