--- a/frontend/src/app/components/persons/persons.component.html
+++ b/frontend/src/app/components/persons/persons.component.html
@@ -31,6 +31,23 @@
 				</div>
 			</div>
 		</div>
-		<div class="col s7"></div>
+		<div class="col s7">
+			<table>
+				<thead>
+					<th>Nombre</th>
+					<th>Email</th>
+					<th>Celular</th>
+					<th>Edad</th>
+				</thead>
+				<tbody>
+					<tr *ngFor="let person of personService.persons">
+						<td>{{ person.name }}</td>
+						<td>{{ person.email }}</td>
+						<td>{{ person.celphone }}</td>
+						<td>{{ person.age }}</td>
+					</tr>	
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
