added menu from frontend

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,2 @@
-<nav class="nav-wrapper blue">
-  <div class="container">
-    <a href="/" class="brand-logo">Bienvenido</a>
-  </div>
-</nav>
+<app-menu></app-menu>
 <app-persons></app-persons>
